# DataSetBagConvertor

./: CMakeLists.txt  README.md  main.cpp
cfg/: cfg.yaml
include/DataIO/: ReadBag.cpp  ReadBag.h
include/tools/: util.h
